--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webauthn": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
